# InstrumentAudioVisualiser

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  InstrumentAudioVisualiser.code-workspace  README.md
InstrumentAudioVisualiser/: Progression.md  Welcome.md
InstrumentAudioVisualiser/.obsidian/: app.json  appearance.json  community-plugins.json  hotkeys.json  workspace  workspace.json
InstrumentAudioVisualiser/.obsidian/plugins/card-board/: data.json
InstrumentAudioVisualiser/.obsidian/plugins/obsidian-minimal-settings/: data.json
InstrumentAudioVisualiser/Features/Visualisation/: Overview.md
InstrumentAudioVisualiser/Making more practical/: Overview.md
InstrumentAudioVisualiserNotes/: Progression.md
include/: AppState.h  AudioInterfaceReader.h  CircularBuffer  CircularBuffer.h  IAudioSource.h  WAVReader.h  shader.h  shader.hpp  waveformUtils.h
include/glad/: glad.h
learning/: FFT.cpp  FFT.h
src/: CicularBuffer  WAVReader.cpp  glad.c  main.cpp  shader.cpp  waveformUtils.cpp
src/shaders/: UI.vert  UIFrag.frag  triangle.vert  triangleFrag.frag
